--- a/JedenSvet/src/jedensvet/GUI.form
+++ b/JedenSvet/src/jedensvet/GUI.form
@@ -357,7 +357,7 @@
         <Property name="text" type="java.lang.String" value="Vyhledat v DB"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="selectFilmButtonMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectFilmButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="vyhledaniFilmuResponse">
